Fix menu being hidden behind other attendees

--- a/app/javascript/src/tailwind/components/menu.css
+++ b/app/javascript/src/tailwind/components/menu.css
@@ -11,7 +11,7 @@
 
   .menu-items {
     @apply absolute bg-white border shadow-lg right-0 p-2 rounded
-           transition ease-in-out duration-200 transform translate-y-0 opacity-100;
+           transition ease-in-out duration-200 transform translate-y-0 opacity-100 z-50;
 
     .menu-item {
       >* {
